# hansol-inticube-poc

./: CMakeLists.txt  README.md  release_appimage.sh  release_deb.sh
example/: 3kb_size.txt  msg.md
httppostclient/: CMakeLists.txt  clientmanager.c  clientmanager.h  cmd.c  cmd.h  common.h  config.c  config.h  dbclient.c  dbclient.h  httpclient.c  httpclient.h  httprequest.c  httprequest.h  linkedlist.c  linkedlist.h  main.c  message.c  message.h  recvworker.c  recvworker.h  report.c  report.h  sendworker.c  sendworker.h  textdb.c  textdb.h  worker.h
httppostclient/test/: generate_hostip.sh  generate_hostip1.sh  hostdb.txt
lib/: CMakeLists.txt  buffer.c  buffer.h  common.h  log.c  log.h  userdbg.c  userdbg.h  worker.c  worker.h
logservice/: CMakeLists.txt  logconfig.c  logconfig.h  logrecv.c  logrecv.h  logwriter.c  logwriter.h  main.c
test/: generate_hostip1.sh  hostdb.txt  msg.txt
unittest/: CMakeLists.txt
unittest/httppostclienttest/: CMakeLists.txt  test_cmd.c  test_config.c  test_dbclient.c  test_message.c  test_recvworker.c  test_report.c  test_sendworker.c
unittest/libtest/: CMakeLists.txt  test_buffer.c  test_log.c  test_worker.c
