cmake_minimum_required(VERSION 3.10)

# Add CMocka dependency
find_package(CMocka REQUIRED)
#if (CMocka_FOUND)
#    include_directories(${CMOCKA_INCLUDE_DIR})
#endif()

# Add the test source files
add_executable(test_cmd test_cmd.c)
add_executable(test_config test_config.c)
add_executable(test_message test_message.c)
add_executable(test_sendworker test_sendworker.c)
add_executable(test_report test_report.c)
add_executable(test_dbclient test_dbclient.c)
add_executable(test_recvworker test_recvworker.c)
#add_executable(test_textdb test_textdb.c)
#add_executable(test_httpclient test_httpclient.c)
#add_executable(test_httprequest test_httprequest.c)
#add_executable(test_linkedlist test_linkedlist.c)

# Set C standards
# set(CMAKE_C_STANDARD 11)
# set(CMAKE_C_STANDARD_REQUIRED True)

# Link CMocka library
target_link_libraries(test_cmd PRIVATE cmocka::cmocka)
target_link_libraries(test_cmd PRIVATE httppostclient_test)
target_link_libraries(test_config PRIVATE cmocka::cmocka)
target_link_libraries(test_config PRIVATE httppostclient_test)
target_link_libraries(test_message PRIVATE cmocka::cmocka)
target_link_libraries(test_message PRIVATE httppostclient_test)
target_link_libraries(test_sendworker PRIVATE cmocka::cmocka)
target_link_libraries(test_sendworker PRIVATE httppostclient_test)
target_link_libraries(test_report PRIVATE cmocka::cmocka)
target_link_libraries(test_report PRIVATE httppostclient_test)
target_link_libraries(test_dbclient PRIVATE cmocka::cmocka)
target_link_libraries(test_dbclient PRIVATE httppostclient_test)
target_link_libraries(test_recvworker PRIVATE cmocka::cmocka)
target_link_libraries(test_recvworker PRIVATE httppostclient_test)
#target_link_libraries(test_textdb PRIVATE cmocka::cmocka)
#target_link_libraries(test_textdb PRIVATE httppostclient_test)
#target_link_libraries(test_httpclient PRIVATE cmocka::cmocka)
#target_link_libraries(test_httpclient PRIVATE httppostclient_test)
#target_link_libraries(test_httprequest PRIVATE cmocka::cmocka)
#target_link_libraries(test_httprequest PRIVATE httppostclient_test)
#target_link_libraries(test_linkedlist PRIVATE cmocka::cmocka)
#target_link_libraries(test_linkedlist PRIVATE httppostclient_test)

# Include directories for the tested code
target_include_directories(test_cmd PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)
target_include_directories(test_config PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)
target_include_directories(test_message PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)
target_include_directories(test_sendworker PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)
target_include_directories(test_sendworker PRIVATE ${CMAKE_SOURCE_DIR}/lib)
target_include_directories(test_report PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)
target_include_directories(test_dbclient PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)
target_include_directories(test_dbclient PRIVATE ${CMAKE_SOURCE_DIR}/lib)
target_include_directories(test_recvworker PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)
target_include_directories(test_recvworker PRIVATE ${CMAKE_SOURCE_DIR}/lib)
#target_include_directories(test_textdb PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)
#target_include_directories(test_textdb PRIVATE ${CMAKE_SOURCE_DIR}/lib)
#target_include_directories(test_httpclient PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)
#target_include_directories(test_httprequest PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)
#target_include_directories(test_linkedlist PRIVATE ${CMAKE_SOURCE_DIR}/httppostclient)

# Add tests
add_test(NAME test_cmd COMMAND test_cmd)
add_test(NAME test_config COMMAND test_config)
add_test(NAME test_message COMMAND test_message)
add_test(NAME test_sendworker COMMAND test_message)
add_test(NAME test_report COMMAND test_report)
add_test(NAME test_dbclient COMMAND test_dbclient)
add_test(NAME test_recvworker COMMAND test_dbclient)
#add_test(NAME test_textdb COMMAND test_config)
#add_test(NAME test_httpclient COMMAND test_httpclient)
#add_test(NAME test_httprequest COMMAND test_httprequest)
#add_test(NAME test_linkedlist COMMAND test_linkedlist)
